--- a/AccountingOfEquipmentInventoryManagementApp/AccountingOfEquipmentInventoryManagementApp.csproj
+++ b/AccountingOfEquipmentInventoryManagementApp/AccountingOfEquipmentInventoryManagementApp.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
